# synergy_pratice_reports

./: README.md
gtest-case#4/: CMakeLists.txt
gtest-case#4/include/: binary_tree.h  heap.h  queue.h
gtest-case#4/tests/: all_tests.cpp
org-html-gen-case#5/: README.md  main.py  settings.py
org-html-gen-case#5/css/: base.css
org-html-gen-case#5/css/fonts/: arial.css  lato.css  roboto.css  times-new-roman.css  verdana.css
org-html-gen-case#5/css/themes/: card-view.css  dark-mode.css  default.css  mobile-view.css
org-html-gen-case#5/rendered/: organization_info.html
org-html-gen-case#5/templates/: template.html
